// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditRepoMetadataForm passes the correct fixedOptions when user appears in the existing list 1`] = `
Array [
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"owners","label":"Owners","selectedTip":"User is an owner","fixedOptions":[{"userId":"sub"}]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"visible","disabled":true,"label":"Visibility","options":[{"value":"PUBLIC","text":"Public: Asset will be visible to all projects"},{"value":"BY_PROJECT","text":"By project: Asset is only visible to selected projects"}]}
  </div>,
]
`;

exports[`EditRepoMetadataForm passes the correct fixedOptions when user has no edit permissions 1`] = `
Array [
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"owners","label":"Owners","selectedTip":"User is an owner","fixedOptions":[{"userId":"sub"},{"userId":"other"}]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"visible","disabled":true,"label":"Visibility","options":[{"value":"PUBLIC","text":"Public: Asset will be visible to all projects"},{"value":"BY_PROJECT","text":"By project: Asset is only visible to selected projects"}]}
  </div>,
]
`;

exports[`EditRepoMetadataForm passes the correct fixedOptions when user is a data manager 1`] = `
Array [
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"owners","label":"Owners","selectedTip":"User is an owner","fixedOptions":[]}
  </div>,
  <div>
    Field: {"InputLabelProps":{"shrink":true},"name":"visible","disabled":true,"label":"Visibility","options":[{"value":"PUBLIC","text":"Public: Asset will be visible to all projects"},{"value":"BY_PROJECT","text":"By project: Asset is only visible to selected projects"}]}
  </div>,
]
`;

exports[`EditRepoMetadataForm renders to match snapshot 1`] = `
<div>
  <form>
    <div>
      Field: {"InputLabelProps":{"shrink":true},"name":"owners","label":"Owners","selectedTip":"User is an owner","fixedOptions":[]}
    </div>
    <div>
      Field: {"InputLabelProps":{"shrink":true},"name":"visible","disabled":true,"label":"Visibility","options":[{"value":"PUBLIC","text":"Public: Asset will be visible to all projects"},{"value":"BY_PROJECT","text":"By project: Asset is only visible to selected projects"}]}
    </div>
    <div
      class="makeStyles-fromControlContainer-1"
    >
      <span
        class="makeStyles-button-2"
        title="No changes to apply"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="submit"
        >
          <span
            class="MuiButton-label"
          >
            Apply
          </span>
        </button>
      </span>
      <span
        class="makeStyles-button-2"
        title="No changes to clear"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedSecondary Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Clear Changes
          </span>
        </button>
      </span>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-button-2 MuiButton-outlinedSecondary"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Cancel
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </form>
</div>
`;
